Minor tidying up